[package]
name = "tmp1x2"
version = "1.0.1"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/tmp1x2-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the TMP102 and TMP112 digital temperature sensors."
readme = "README.md"
keywords = ["temperature", "sensor", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/tmp1x2-rs"
documentation = "https://docs.rs/tmp1x2"
edition = "2021"
include = [
    "**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[dependencies]
embedded-hal = "1.0"
nb = "1.1"

[dev-dependencies]
linux-embedded-hal = "0.4"
embedded-hal-mock = {version = "0.11.1", default-features = false, features = ["eh1"]}

[profile.release]
lto = true
